required fields asterix added

--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -6,37 +6,38 @@
     <div class="col-md-6 col-md-offset-3">
       <h1>New Event</h1>
       <form ng-submit="eventsCreate.create()">
-        <div class="form-group">
-          <label for="name">Event name</label>
-          <input type="text" class="form-control" id="name" name="name" ng-model="eventsCreate.event.name">
+        <p>required fields *</p>
+        <div class="form-group required">
+          <label class="control-label" for="name">Event name</label>
+          <input type="text" required="true" class="form-control" id="name" name="name" ng-model="eventsCreate.event.name">
+        </div>
+        <div class="form-group required">
+          <label class="control-label" for="address">Address</label>
+          <input type="text" required="true" class="form-control" id="address" name="address" ng-model="eventsCreate.event.address">
+        </div>
+        <div class="form-group required">
+          <label class="control-label" for="description">Event info</label>
+          <input type="text" required="true" class="form-control" id="description" name="description" ng-model="eventsCreate.event.description">
         </div>
         <div class="form-group">
-          <label for="address">Address</label>
-          <input type="text" class="form-control" id="address" name="address" ng-model="eventsCreate.event.address">
+          <label for="cost">Cost</label>
+          <input type="text" class="form-control" id="cost" name="cost" ng-model="eventsCreate.event.cost">
         </div>
         <div class="form-group">
-          <label for="description">Event info</label>
-          <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.description">
+          <label for="url">Website</label>
+          <input type="text" class="form-control" id="url" name="url" ng-model="eventsCreate.event.url">
         </div>
-        <div class="form-group">
-          <label for="description">Cost</label>
-          <input type="text" class="form-control" id="cost" name="description" ng-model="eventsCreate.event.cost">
-        </div>
-        <div class="form-group">
-          <label for="description">Website</label>
-          <input type="text" class="form-control" id="url" name="description" ng-model="eventsCreate.event.url">
-        </div>
-        <div class="form-group">
-          <label for="description">Image</label>
-          <input type="text" class="form-control" id="img" name="description" ng-model="eventsCreate.event.img">
+        <div class="form-group required">
+          <label class="control-label" for="image">Image</label>
+          <input type="text" required="true" class="form-control" id="img" name="description" ng-model="eventsCreate.event.img">
         </div>
         <div class="form-group">
           <label for="description">Emoji</label>
           <input type="text" class="form-control" id="emoji" name="description" ng-model="eventsCreate.event.emoji">
         </div>
-        <div class="form-group">
-          <label for="description">Start time</label>
-          <input type="text" class="form-control" id="startTime" name="description" ng-model="eventsCreate.event.startTime">
+        <div class="form-group required">
+          <label class="control label" for="description">Start time</label>
+          <input type="text" required="true" class="form-control" id="startTime" name="description" ng-model="eventsCreate.event.startTime">
         </div>
         <div class="form-group">
           <label for="description">Finish time</label>
