adding again for development merge

--- a/src/js/views/register.html
+++ b/src/js/views/register.html
@@ -1,6 +1,6 @@
 <h1>Register</h1>
 <form ng-submit="register.register()">
-  <p>All fields required</p>
+  <p>required fields *</p>
   <div class="form-group">
     <input class="form-control" type="text" name="first_name" ng-model="register.user.firstName" placeholder="First name" required>
   </div>
