--- a/src/js/views/users/inbox.html
+++ b/src/js/views/users/inbox.html
@@ -1,30 +1,24 @@
 <h1>Inbox</h1>
 
+<div ng-if="usersInbox.noMessages">
+  <h1>You have no requests</h1>
+</div>
 
 
 
-<!-- <ul>
-<li ng-repeat="user in inbox.user">
-<h3><b>Active Event:</b> {{usersInbox.user[0].event.name}}</h3>
-<h4><b></b> {{usersInbox.user[0].event.address}}</h4>
-<h4><b>From:</b> {{user.sender.firstName}}</h4>
-<h4><b>To:</b> Me</h4>
-<p><b>Email:</b> {{usersInbox.user[0].sender.email}}</p>
-<p><b>Message:</b> {{usersInbox.user[0].text}}</p>
-<a s-ref="">Accept</a> -->
+<div ng-if="usersInbox.showMessages">
 
-
-
-
-<h5><b>Active Event <br><br></b><a ui-sref="eventsShow({ id: usersInbox.user[0].event._id })">{{usersInbox.user[0].event.name}}</a></h5>
-<h5><b></b> {{usersInbox.user[0].event.address}}</h5>
+<h5><b>Active Event <br><br></b><a ui-sref="eventsShow({ id: usersInbox.messages[0].event._id })">{{usersInbox.messages[0].event.name}}</a></h5>
+<h5><b></b> {{usersInbox.messages[0].event.address}}</h5>
 <ul>
-  <li ng-repeat="user in usersInbox.user">
-    <h4><b>From:</b><a ui-sref="usersShow({ id: user.sender._id })"> {{user.sender.firstName}} {{user.sender.lastName}}</a></h4>
-    <h4><b>To: </b><a ui-sref="usersShow({ id: user.receiver._id })">Me</a></h4>
-    <p><b>Email:</b> {{user.sender.email}}</p>
-    <p><b>Message:</b> {{user.text}}</p>
-    <p><b>Status:</b> {{user.status}}</p>
-    <button ng-if="usersInbox.hideOnAccept(user.status)" class="btn btn-default" ng-click="usersInbox.accept(user)">Accept</button>
+  <p>I can see this</p>
+  <li ng-repeat="messages in usersInbox.messages">
+    <h4><b>From:</b><a ui-sref="usersShow({ id: mesages.sender._id })"> {{messages.sender.firstName}} {{messages.sender.lastName}}</a></h4>
+    <h4><b>To: </b><a ui-sref="usersShow({ id: messages.receiver._id })">Me</a></h4>
+    <p><b>Email:</b> {{messages.sender.email}}</p>
+    <p><b>Message:</b> {{messages.text}}</p>
+    <p><b>Status:</b> {{messages.status}}</p>
+    <button ng-if="usersInbox.hideOnAccept(messages.status)" class="btn btn-default" ng-click="usersInbox.accept(messages)">Accept</button>
   </li>
 </ul>
+</div>
