hide buttons on host profile

--- a/src/js/views/users/deleteCheck.html
+++ b/src/js/views/users/deleteCheck.html
@@ -7,6 +7,5 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/2a4gyJsY0mc?autoplay=1" frameborder="0" allowfullscreen></iframe>
 
 
-
-<button class="btn btn-default" ng-click="usersShow.delete(usersShow.user)">Delete your account for ever and ever</button>
+<button class="btn btn-warning" ng-click="usersDeleteCheck.delete()">Delete your account for ever and ever</button>
 </div>
