--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -14,9 +14,8 @@
 <p>location &bull; {{usersShow.user.dob}}</p>
       <h4>Bio</h4>
       <p>{{usersShow.user.bio}}</p>
-      <button class="btn btn-default" ui-sref="usersEdit({ id: usersShow.user._id })">Edit</button>
-      <!-- <button class="btn btn-default" ng-click="/users/usersShow.user/delete)">Delete</button> -->
-      <a ui-sref="usersDeleteCheck">delete</a>
+      <button ng-if="" class="btn btn-default" ui-sref="usersEdit({ id: usersShow.user._id })">Edit</button>
+      <a ng-if="" ui-sref="usersDeleteCheck">delete</a>
       <ul>
         <li ng-repeat="request in usersShow.requests">{{ request.text }}</li>
       </ul>
