Added additional users and events in seeds folder

--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -12,7 +12,7 @@
       <h1>{{usersShow.user.firstName}} {{usersShow.user.lastName}}</h1>
 
 <img src="{{usersShow.user.profilePicture}}" alt="Profile Picture">
-<p>location &bull; {{usersShow.user.dob}}</p>
+<p>D.O.B. {{usersShow.user.dob}}</p>
 
 
       <h4>Bio</h4>
