--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -35,9 +35,9 @@
           <label for="description">Emoji</label>
           <input type="text" class="form-control" id="emoji" name="description" ng-model="eventsCreate.event.emoji">
         </div>
-        <div class="form-group required">
-          <label class="control label" for="description">Start time</label>
-          <input type="text" required="true" class="form-control" id="startTime" name="description" ng-model="eventsCreate.event.startTime">
+        <div class="form-group">
+          <label for="startTime">Start time</label>
+          <input type="text" class="form-control" id="startTime" name="startTime" ng-model="eventsCreate.event.startTime">
         </div>
         <div class="form-group">
           <label for="description">Finish time</label>
