--- a/src/scss/_usersShow.scss
+++ b/src/scss/_usersShow.scss
@@ -168,7 +168,7 @@
   .event-list > li > .info > .desc {
     padding: 0px 10px;
     margin-top: 4px;
-    font-family: 'OrkneyRegular';
+    font-family: 'OrkneyLight';
     font-weight: normal;
     font-style: normal;
   }
