--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -9,8 +9,10 @@
 <section class="usersShow">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
+      <div class="profilePicture">
+              <img class="profilePictureImg" src="{{usersShow.user.profilePicture}}" alt="Profile Picture">
+      </div>
       <h1>{{usersShow.user.firstName}} {{usersShow.user.lastName}}</h1>
-<img src="{{usersShow.user.profilePicture}}" alt="Profile Picture">
 <p>D.O.B. {{usersShow.user.dob}}</p>
       <h4>Bio</h4>
       <p>{{usersShow.user.bio}}</p>
