--- a/src/js/views/users/edit.html
+++ b/src/js/views/users/edit.html
@@ -4,6 +4,9 @@
 {{ vm.user }}
   <div class="form-group">
 
+    <label for="profilePicture">Profile Picture</label>
+    <input type="text" class="form-control" id="profilePicture" name="profilePicture" ng-model="usersEdit.user.profilePicture">
+
     <label for="firstName">Fist Name</label>
     <input type="text" class="form-control" id="firstName" name="firstName" ng-model="usersEdit.user.firstName">
 
