--- a/src/scss/pages/_usersShow.scss
+++ b/src/scss/pages/_usersShow.scss
@@ -1,5 +1,8 @@
 section.usersShow {
   text-align: center;
+  width: 300px;
+  margin: 0 auto;
+  background-color: white;
 }
 .profilePictureImg{
   object-fit: contain;
