--- a/src/scss/_misc.scss
+++ b/src/scss/_misc.scss
@@ -5,6 +5,9 @@
   overflow-y:hidden;
   padding: 0 15px;
 }
+body{
+  background-color: rgb(249, 249, 249);
+}
 
 .yes-no-list{
   padding: 0;
@@ -31,7 +34,7 @@
 .eventImage{
   width: 150px;
   height:150px;
-  
+
 }
 
 .list-inline {
