--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -24,36 +24,14 @@
 
     <div ng-if="eventsShow.showRequestModal">
 
-      <!-- <form ng-submit="eventsShow.interested(eventsShow.event)">
+      <form ng-submit="eventsShow.interested(eventsShow.event)">
         <div class="form-group">
           <input class="form-control" type="text" name="requestMessage" ng-model="eventsShow.sendInterestedText" placeholder="Write your message here" >
         </div>
         <input class="btn btn-primary btn-block" type="submit" value="Submit">
       </form>
 
-    </div> -->
-
-
-    <div ng-controller="ModalMessageCtrl as $ModalMessageCtrl" class="modal-demo">
-        <script type="text/ng-template" id="myModalContent.html">
-            <div class="modal-header">
-                <h3 class="modal-title" id="modal-title">I'm a modal!</h3>
-            </div>
-            <div class="modal-body" id="modal-body">
-                <ul>
-                    <li ng-repeat="item in $ctrl.items">
-                        <a href="#" ng-click="$event.preventDefault(); $ctrl.selected.item = item">{{ item }}</a>
-                    </li>
-                </ul>
-                Selected: <b>{{ $ctrl.selected.item }}</b>
-            </div>
-            <div class="modal-footer">
-                <button class="btn btn-primary" type="button" ng-click="$ctrl.ok()">OK</button>
-                <button class="btn btn-warning" type="button" ng-click="$ctrl.cancel()">Cancel</button>
-            </div>
-             </script>
-
-
+    </div>
 
 
 
