--- a/src/js/views/users/deleteCheck.html
+++ b/src/js/views/users/deleteCheck.html
@@ -1,11 +1,13 @@
 <div class="dangerZone">
-  <h1>* * * * * DANGER ZONE * * * * *</h1>
+  <h1>DANGER ZONE</h1>
 
   <p>Everyone will be sad to see you leave but don't fear, we will always love you if you do. We wish you well and thank you for coming to stay.</p>
-  <h6>From all at Club Mate</h6>
+  <h4>From all at Club Mate</h4>
+  <br>
+  <br>
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/2a4gyJsY0mc?autoplay=1" frameborder="0" allowfullscreen></iframe>
+<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/2a4gyJsY0mc?autoplay=1" frameborder="0" allowfullscreen></iframe> -->
 
 
-<button class="btn btn-warning" ng-click="usersDeleteCheck.delete()">Delete your account for ever and ever</button>
+<button class="btn btn-warning" ng-click="usersDeleteCheck.delete()">Delete your account<br>for ever and ever</button>
 </div>
