--- a/src/js/views/users/edit.html
+++ b/src/js/views/users/edit.html
@@ -1,3 +1,4 @@
+<div class="col-md-6 col-md-offset-3">
 <h2>Edit User</h2>
 
 <form ng-submit="usersEdit.update()">
@@ -24,3 +25,4 @@
   <input type="submit" class="btn btn-default btn-block" value="Add">
 
   </form>
+</div>
