--- a/src/js/views/events/create.html
+++ b/src/js/views/events/create.html
@@ -22,31 +22,23 @@
   </div>
 
   <!-- <div class="form-group">
-    <label for="image">Image</label>
-    <input type="text" class="form-control" id="image" name="image" ng-model="eventsCreate.event.img">
-  </div> -->
+  <label for="image">Image</label>
+  <input type="text" class="form-control" id="image" name="image" ng-model="eventsCreate.event.img">
+</div> -->
 
-  <div class="form-group" action="../src/images/events" method="post" enctype="multipart/form-data"
-  ng-model="eventsCreate.event.img">
-  <label for="image">Upload Image</label>
-      <input name="myFile" type="file" id="image" class="form-control"/>
-      <input name="width" value="50%" style="display: none"/>
-      <input name="widgetId" value="{{ model.widget._id }}" style="display: none"/>
-      <!-- <input type="submit" class="btn btn-block btn-primary"/>upload image -->
-  </div>
+<image-selector></image-selector>
 
-
-  <div class="form-group">
-    <label for="emoji">Emoji</label>
-    <input type="text" class="form-control" id="emoji" name="emoji" ng-model="eventsCreate.event.emoji">
-  </div>
-  <div class="form-group">
-    <label for="startTime">Start time</label>
-    <input type="text" class="form-control" id="startTime" name="startTime" ng-model="eventsCreate.event.startTime">
-  </div>
-  <div class="form-group">
-    <label for="description">Finish time</label>
-    <input type="text" class="form-control" id="description" name="finishTime" ng-model="eventsCreate.event.finishTime">
-  </div>
-  <input type="submit" class="btn btn-default btn-block" value="Add">
+<div class="form-group">
+  <label for="emoji">Emoji</label>
+  <input type="text" class="form-control" id="emoji" name="emoji" ng-model="eventsCreate.event.emoji">
+</div>
+<div class="form-group">
+  <label for="startTime">Start time</label>
+  <input type="text" class="form-control" id="startTime" name="startTime" ng-model="eventsCreate.event.startTime">
+</div>
+<div class="form-group">
+  <label for="description">Finish time</label>
+  <input type="text" class="form-control" id="description" name="finishTime" ng-model="eventsCreate.event.finishTime">
+</div>
+<input type="submit" class="btn btn-default btn-block" value="Add">
 </form>
