--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -11,32 +11,36 @@
         <input type="text" class="form-control" id="address" name="address" ng-model="eventsCreate.event.address">
       </div>
       <div class="form-group">
-        <label for="description">Event info</label>
-        <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.description">
+        <label for="eventinfo">Event info</label>
+        <input type="text" class="form-control" id="eventinfo" name="eventinfo" ng-model="eventsCreate.event.description">
       </div>
       <div class="form-group">
-        <label for="description">Cost</label>
-        <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.cost">
+        <label for="cost">Cost</label>
+        <input type="text" class="form-control" id="cost" name="descripcosttion" ng-model="eventsCreate.event.cost">
       </div>
       <div class="form-group">
-        <label for="description">Website</label>
-        <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.url">
+        <label for="website">Website</label>
+        <input type="text" class="form-control" id="website" name="website" ng-model="eventsCreate.event.url">
       </div>
-      <div class="form-group">
+      <!-- <div class="form-group">
         <label for="description">Image</label>
         <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.img">
+      </div> -->
+
+      <image-selector></image-selector>
+
+
+      <div class="form-group">
+        <label for="emoji">Emoji</label>
+        <input type="text" class="form-control" id="emoji" name="emoji" ng-model="eventsCreate.event.emoji">
       </div>
       <div class="form-group">
-        <label for="description">Emoji</label>
-        <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.emoji">
+        <label for="starttime">Start time</label>
+        <input type="text" class="form-control" id="starttime" name="starttime" ng-model="eventsCreate.event.startTime">
       </div>
       <div class="form-group">
-        <label for="description">Start time</label>
-        <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.startTime">
-      </div>
-      <div class="form-group">
-        <label for="description">Finish time</label>
-        <input type="text" class="form-control" id="description" name="description" ng-model="eventsCreate.event.finishTime">
+        <label for="finishtime">Finish time</label>
+        <input type="text" class="form-control" id="finishtime" name="finishtime" ng-model="eventsCreate.event.finishTime">
       </div>
       <input type="submit" class="btn btn-primary btn-block" value="Add">
     </form>
