--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -1,5 +1,8 @@
+<div class="col-md-6 col-md-offset-3">
 <div ng-if="eventsCreate.activeEventCheckMessage">
-  <h1>You already have an active event. Wait for some interest and accept before creating another event</h1>
+  <h3>Whoa there!<br><br>
+    You already have an active event. Wait for some interest and accept before creating another event</h3>
+</div>
 </div>
 <div ng-if="eventsCreate.activeEventCheck" class="noActive">
   <div class="row">
