--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -27,10 +27,10 @@
           <label for="url">Website</label>
           <input type="text" class="form-control" id="url" name="url" ng-model="eventsCreate.event.url">
         </div>
-        <div class="form-group required">
+        <!-- <div class="form-group required">
           <label class="control-label" for="image">Image</label>
           <input type="text" required="true" class="form-control" id="img" name="description" ng-model="eventsCreate.event.img">
-        </div>
+        </div> -->
 
             <image-selector></image-selector>
 
