--- a/src/scss/pages/_inbox.scss
+++ b/src/scss/pages/_inbox.scss
@@ -2,20 +2,20 @@
 @import url("//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css");
 
 
-.messages {
+.event-list {
   list-style: none;
   font-family: 'Lato', sans-serif;
   margin: 0px;
   padding: 0px;
 }
-.messages > li {
+.event-list > li {
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 0px 5px rgb(51, 51, 51);
   box-shadow: 0px 0px 5px rgba(51, 51, 51, 0.7);
   padding: 0px;
   margin: 0px 0px 20px;
 }
-.messages > li > time {
+.event-list > li > time {
   display: inline-block;
   width: 100%;
   color: rgb(255, 255, 255);
@@ -31,43 +31,43 @@
   text-align: center;
   text-transform: uppercase;
 }
-.messages > li:nth-child(even) > time {
+.event-list > li:nth-child(even) > time {
   background-color: rgb(165, 82, 167);
 }
-.messages > li > time > span {
+.event-list > li > time > span {
   display: none;
 }
-.messages > li > time > .day {
+.event-list > li > time > .day {
   display: block;
   font-size: 56pt;
   font-weight: 100;
   line-height: 1;
 }
-.messages > li time > .month {
+.event-list > li time > .month {
   display: block;
   font-size: 24pt;
   font-weight: 900;
   line-height: 1;
 }
-.messages > li > img {
+.event-list > li > img {
   width: 100%;
 }
-.messages > li > .info {
+.event-list > li > .info {
   padding-top: 5px;
   text-align: center;
 }
-.messages > li > .message-content > .title {
+.event-list > li > .info > .title {
   font-size: 17pt;
   font-weight: 700;
   margin: 0px;
 }
-.messages > li > .message-content > .desc {
+.event-list > li > .info > .desc {
   font-size: 13pt;
   font-weight: 300;
   margin: 0px;
 }
-.messages > li > .info > ul,
-.messages > li > .social > ul {
+.event-list > li > .info > ul,
+.event-list > li > .social > ul {
   display: table;
   list-style: none;
   margin: 10px 0px 0px;
@@ -75,11 +75,11 @@
   width: 100%;
   text-align: center;
 }
-.messages > li > .social > ul {
+.event-list > li > .social > ul {
   margin: 0px;
 }
-.messages > li > .info > ul > li,
-.messages > li > .social > ul > li {
+.event-list > li > .info > ul > li,
+.event-list > li > .social > ul > li {
   display: table-cell;
   cursor: pointer;
   color: rgb(30, 30, 30);
@@ -87,20 +87,20 @@
   font-weight: 300;
   padding: 3px 0px;
 }
-.messages > li > .info > ul > li > a {
+.event-list > li > .info > ul > li > a {
   display: block;
   width: 100%;
   color: rgb(30, 30, 30);
   text-decoration: none;
 }
-.messages > li > .social > ul > li {
+.event-list > li > .social > ul > li {
   padding: 0px;
 }
-.messages > li > .social > ul > li > a {
+.event-list > li > .social > ul > li > a {
   padding: 3px 0px;
 }
-.messages > li > .info > ul > li:hover,
-.messages > li > .social > ul > li:hover {
+.event-list > li > .info > ul > li:hover,
+.event-list > li > .social > ul > li:hover {
   color: rgb(30, 30, 30);
   background-color: rgb(200, 200, 200);
 }
@@ -131,41 +131,41 @@
 }
 
 @media (min-width: 768px) {
-  .messages > li {
+  .event-list > li {
     position: relative;
     display: block;
     width: 100%;
     height: 120px;
     padding: 0px;
   }
-  .messages > li > time,
-  .messages > li > img  {
+  .event-list > li > time,
+  .event-list > li > img  {
     display: inline-block;
   }
-  .messages > li > time,
-  .messages > li > img {
+  .event-list > li > time,
+  .event-list > li > img {
     width: 120px;
     float: left;
   }
-  .messages > li > .info {
+  .event-list > li > .info {
     background-color: rgb(245, 245, 245);
     overflow: hidden;
   }
-  .messages > li > time,
-  .messages > li > img {
+  .event-list > li > time,
+  .event-list > li > img {
     width: 120px;
     height: 120px;
     padding: 0px;
     margin: 0px;
   }
-  .messages > li > .info {
+  .event-list > li > .info {
     position: relative;
     height: 120px;
     text-align: left;
     padding-right: 15px;
   }
-  .messages > li > .info > .title,
-  .messages > li > .info > .desc {
+  .event-list > li > .info > .title,
+  .event-list > li > .info > .desc {
     padding: 0px 10px;
     margin-top: 4px;
     font-family: 'OrkneyRegular';
@@ -173,41 +173,41 @@
     font-style: normal;
   }
 
-  .messages > li > .info > .title {
+  .event-list > li > .info > .title {
     font-weight: bold;
   }
 
 
-  .messages > li > .info > .address {
+  .event-list > li > .info > .address {
     font-weight: bold;
     padding: 0px 10px;
   }
 
-  .messages > li > .info > .interest {
+  .event-list > li > .info > .interest {
     font-weight: bold;
     text-align: right;
   }
 
-  .messages > li > .info > ul {
+  .event-list > li > .info > ul {
     position: absolute;
     left: 0px;
     bottom: 0px;
   }
-  .messages > li > .social {
+  .event-list > li > .social {
     position: absolute;
     top: 0px;
     right: 0px;
     display: block;
     width: 40px;
   }
-  .messages > li > .social > ul {
+  .event-list > li > .social > ul {
     border-left: 1px solid rgb(230, 230, 230);
   }
-  .messages > li > .social > ul > li {
+  .event-list > li > .social > ul > li {
     display: block;
     padding: 0px;
   }
-  .messages > li > .social > ul > li > a {
+  .event-list > li > .social > ul > li > a {
     display: block;
     width: 40px;
     padding: 10px 0px 9px;
