--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -1,5 +1,5 @@
 <div class="col-md-6 col-md-offset-3">
-<div ng-if="eventsCreate.activeEventCheckMessage">
+<div class="woahThere" ng-if="eventsCreate.activeEventCheckMessage">
   <h3>Whoa there!<br><br>
     You already have an active <a ui-sref="eventsShow({ id: eventsCreate.event._id })">event</a>. Wait for some interest and accept before creating another event</h3>
 
