--- a/src/scss/_misc.scss
+++ b/src/scss/_misc.scss
@@ -9,6 +9,13 @@ body{
   background-color: rgb(249, 249, 249);
 }
 
+.woahThere{
+  background-color: white;
+  padding: 30px;
+  margin-top: 50px;
+  border: solid 1px rgb(226, 226, 226);
+}
+
 .yes-no-list{
   padding: 0;
   text-align: center;
