--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -1,11 +1,15 @@
 
-<div class="row">
+<div class="row eventShow">
   <div class="col-md-6 col-md-offset-3">
     <div class="eventCard">
         <img class="eventImage" src="{{ eventsShow.event.img }}" alt="{{ event.name }}"/>
       <div class="eventInfo">
         <h3>{{ eventsShow.event.name }}</h3><p>{{ eventsShow.event.emoji }}</p>
-        <a ui-sref="usersShow({ id: eventsShow.event.host._id })"><img src="{{ usersShow.user.profile_picture }}" alt="Host Profile"></a>
+
+        <a ng-if="eventsShow.hostProfileToggle" ui-sref="usersShow({ id: eventsShow.event.host._id })"><img src="{{ usersShow.user.profile_picture }}" alt="Host Profile"></a>
+
+        <a ng-if="eventsShow.myProfileToggle" ui-sref="usersShow({ id: eventsShow.event.host._id })"><img src="{{ usersShow.user.profile_picture }}" alt="My Profile"></a>
+
         <p>{{ eventsShow.event.startTime | date }} - {{ eventsShow.event.finishTime | date }}</p>
         <p>{{ eventsShow.event.address }}</p>
         <p>{{ eventsShow.event.url }}</p>
