--- a/src/js/views/users/inbox.html
+++ b/src/js/views/users/inbox.html
@@ -12,13 +12,13 @@
 <h5><b></b> {{usersInbox.messages[0].event.address}}</h5>
 <ul>
   <p>I can see this</p>
-  <li ng-repeat="messages in usersInbox.messages">
+  <li ng-repeat="messages in usersInbox.messages" ng-if="usersInbox.hideOnAccept(messages.status)">
     <h4><b>From:</b><a ui-sref="usersShow({ id: messages.sender._id })"> {{messages.sender.firstName}} {{messages.sender.lastName}}</a></h4>
     <h4><b>To: </b><a ui-sref="usersShow({ id: messages.receiver._id })">Me</a></h4>
     <p><b>Email:</b> {{messages.sender.email}}</p>
     <p><b>Message:</b> {{messages.text}}</p>
     <p><b>Status:</b> {{messages.status}}</p>
-    <button ng-if="usersInbox.hideOnAccept(messages.status)" class="btn btn-default" ng-click="usersInbox.accept(messages)">Accept</button>
+    <button class="btn btn-default" ng-click="usersInbox.accept(messages)">Accept</button>
   </li>
 </ul>
 </div>
