--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -11,9 +11,9 @@
     </div>
     <div class="event-details">
       <h2>{{ eventsShow.event.name }}</h2>
-      <p>{{ eventsShow.event.date }}</p>
       <p>{{ eventsShow.event.address }}</p>
-      <p>{{ eventsShow.event.website }}</p>
+      <p>{{ eventsShow.event.description }}</p>
+      <p>{{ eventsShow.event.url }}</p>
       <p>{{ eventsShow.event.location }}</p>
       <p></p>
     </div>
