--- a/src/js/views/events/new.html
+++ b/src/js/views/events/new.html
@@ -2,7 +2,7 @@
 <div class="woahThere" ng-if="eventsCreate.activeEventCheckMessage">
   <h3>Whoa there!<br><br>
     You already have an active <a ui-sref="eventsShow({ id: eventsCreate.event._id })">event</a>. Wait for some interest and accept before creating another event</h3>
-
+</div>
 <div ng-if="eventsCreate.activeEventCheck" class="noActive">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
@@ -52,4 +52,5 @@
       </form>
     </div>
   </div>
+</div>
 </div>
