--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,4 +13,5 @@
 @import "pages/usersShow";
 @import "pages/events";
 @import "pages/dangerZone";
-@import "pages/inbox"
+@import "pages/inbox";
+@import "pages/home";
