--- a/src/scss/pages/_dangerZone.scss
+++ b/src/scss/pages/_dangerZone.scss
@@ -1,7 +1,7 @@
 .dangerZone{
   width: 50%;
   text-align: center;
-  margin: 0 auto;
+  margin: 30px auto;
   border: solid red 5px;
   padding: 25px;
 }
