--- a/src/scss/pages/_inbox.scss
+++ b/src/scss/pages/_inbox.scss
@@ -1,23 +1,70 @@
+.messageHeader {
+  padding: 10px;
+}
+
+.switchMessage {
+    float: right;
+    margin-right: 380px;
+    margin-top: 12px;
+    font-size: 30px;
+}
+
+.active-event {
+  padding: 10px;
+}
+
+.eventName {
+  color: #999;
+}
+
 .message-content {
-  background-color: pink;
-  float: left;
-  display: inline;
-  width: 550px;
+  background: #fff;
+  width: 501px;
+  border: 2px solid #ccc;
+  border-radius: 2px;
+  margin: 30px 0px;
+  padding: 5px 15px 0 15px;
 }
 
 .firstName {
   float: left;
-}
-
-.secondName {
-  float: left;
+  font-weight: 600;
 }
 
 .email-picture {
-  height: 50px;
-  width: 50px;
+  position: relative;
+  top: -12px;
+  left: -20px;
+  height: 100px;
+  width: 100px;
   border-radius: 100%;
   float: left;
   display: inline-block;
-  border-bottom: 4px solid $primary-color;
+  border: 4px solid $primary-color;
+}
+
+// top: -12px;
+// left: -20px;
+// height: 100px;
+// width: 100px;
+
+.pending {
+  float: right;
+  background: #ccc;
+  color: #fff;
+  padding: 5px;
+  position: relative;
+  top: -5px;
+  right: -15px;
+  border-radius: 0px 0px 0px 2px;
+}
+
+button.btn-default.emailAccept.ng-scope {
+  float: right;
+  background: none;
+  color: $primary-color;
+  border: none;
+  border-radius: 100%;
+  margin-top: -40px;
+  font-size: 17px;
 }
