--- a/src/js/views/events/create.html
+++ b/src/js/views/events/create.html
@@ -21,12 +21,12 @@
     <input type="text" class="form-control" id="website" name="website" ng-model="eventsCreate.event.url">
   </div>
 
-  <!-- <div class="form-group">
+  <div class="form-group">
   <label for="image">Image</label>
   <input type="text" class="form-control" id="image" name="image" ng-model="eventsCreate.event.img">
-</div> -->
+</div>
 
-<image-selector></image-selector>
+<!-- <image-selector></image-selector> -->
 
 <div class="form-group">
   <label for="emoji">Emoji</label>
