profile page update

--- a/src/js/views/users/show.html
+++ b/src/js/views/users/show.html
@@ -4,11 +4,11 @@
       <img src="{{ eventsShow.event.img }}">
     </div>
     <div class="user-details">
-      <img class="profilePictureImg" src="{{usersShow.user.profilePicture}}" alt="Profile Picture">
+      <img class="profilePictureImg" src="{{usersShow.user.profilePicture}}" alt="Click edit and insert your own profile picture">
       <h3>{{usersShow.user.firstName}} {{usersShow.user.lastName}}</h3><br><br><br>
     </div>
     <div class="user-details user-details-2">
-      <h4>Bio</h4><p>{{usersShow.user.bio}}</p>
+      <p>Bio {{usersShow.user.bio}}</p>
       <p>Birthday {{usersShow.user.dob}}</p>
       <div class="interactions">
         <a class="cog" ng-if="usersShow.editDeleteHide" ui-sref="usersEdit({ id: usersShow.user._id })">edit</a>  ||  <a ng-if="usersShow.editDeleteHide" ui-sref="usersDeleteCheck({ id: usersShow.user._id })">delete</a>
