--- a/src/js/views/landing.html
+++ b/src/js/views/landing.html
@@ -1,12 +1,15 @@
 <section class="home">
   <div class="row">
     <div class="col-md-6 col-md-offset-3">
-      <h1>Make new friends.</h1>
+      <h1>Make friends.</h1>
       <img src="/images/iphone.png" class="animated slideInLeft">
       <ul class="list-inline text-center">
         <li><a ui-sref="home" class="btn btn-default">Login</a></li>
         <li><a ui-sref="home" class="btn btn-primary">Register</a></li>
       </ul>
     </div>
+  </div>
+  <div class="row2">
+    
   </div>
 </section>
