--- a/src/js/views/users/outbox.html
+++ b/src/js/views/users/outbox.html
@@ -10,9 +10,11 @@
         <a ui-sref="usersShow({ id: messages.sender._id })"><img class="email-picture" src="{{messages.sender.profile_picture}}"></a>
         <div class="message-content">
 
-    <h4><b>To: </b><a class="firstName" ui-sref="usersShow({ id: messages.receiver._id })">{{messages.receiver.firstName}} {{messages.receiver.lastName}}</a></h4>
-    <p><b>Email:</b> {{messages.receiver.email}}</p>
-    <p><b>Message:</b> {{messages.text}}</p>
+    <a class="firstName" ui-sref="usersShow({ id: messages.receiver._id })">{{messages.receiver.firstName}} {{messages.receiver.lastName}}</a>
+    <br>
+    <a class="eventName" ui-sref="#">{{messages.event.name}}</a>
+    <p>{{messages.text}}</p>
+  </div>
   </li>
 </ul>
 </div>
