--- a/src/js/views/users/inbox.html
+++ b/src/js/views/users/inbox.html
@@ -15,7 +15,7 @@
     <a class="firstName" ui-sref="usersShow({ id: messages.sender._id })"> {{messages.sender.firstName}} {{messages.sender.lastName}}</a>
     <p class="pending"><b>Status:</b> {{messages.status}}</p>
     <br>
-    <a class="eventName" ui-sref="#">{{messages.event.name}}</a>
+    <a class="eventName" ui-sref="eventsShow({id: messages.event._id})">{{messages.event.name}}</a>
     <p>{{messages.text}}</p>
     <button ng-if="usersInbox.hideOnAccept(messages.status)" class="btn btn-default emailAccept" ng-click="usersInbox.accept(messages)">Accept</button>
   </div>
