no events message

--- a/src/js/views/events/eventsList.html
+++ b/src/js/views/events/eventsList.html
@@ -1,8 +1,13 @@
-<h2 class="eventTitles" ng-show="events.noEvents">No events!</h2>
+<div class="col-md-6 col-md-offset-3">
+<div ng-show="events.noEvents" class="woahThere">
+<h2>You've no events organised yet - head over to <a ui-sref="eventsCreate">add event</a> to start your adventure or browse some <a ui-sref="eventsIndex">others...</a></h2>
+</div>
+</div>
 
-<h2 class="eventTitles" ng-hide="events.checkHosting">Hosting</h2>
+
 <div class="container">
   <ul class="row">
+    <h2 class="eventTitles" ng-hide="events.checkHosting">Hosting</h2>
     <li class="tile col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 eventBox" ng-repeat="event in events.events track by $index">
       <img ui-sref="eventsShow({ id: event._id })" src="{{ event.img }}">
       <div class="info">
@@ -12,7 +17,7 @@
     </li>
   </ul>
 </div>
-<h2 class="eventTitles" ng-hide="events.checkAttending">Attending</h2>
+<h2 class="eventTitles" ng-if="events.checkAttending">Attending</h2>
 <div class="container">
   <ul class="row">
     <li class="tile col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 eventBox" ng-repeat="event in events.requestsAccepted track by $index">
