--- a/src/js/views/users/inbox.html
+++ b/src/js/views/users/inbox.html
@@ -1,7 +1,11 @@
 <h1 class="messageHeader">Inbox</h1>
 
 <div ng-if="usersInbox.noMessages">
-  <h1>You have no requests</h1>
+  <!-- <div class="col-md-6 col-md-offset-3"> -->
+  <div class="woahThere">
+  <h2>Relax you wonderful person. No messages at the moment. Start an <a ui-sref="eventsCreate">event</a> or dive into some <a ui-sref="eventsIndex">others</a> to start feeling the love.</h2>
+  </div>
+  <!-- </div> -->
 </div>
 
 <div class="messages" ng-if="usersInbox.showMessages">
