Changed headers font

--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -2,3 +2,17 @@
   background: $primary-color;
   border-color: $primary-color;
 }
+
+.btn-primary:hover {
+  background: $primary-color;
+}
+
+.btn-primary:active {
+  background: $primary-color;
+  text-decoration: none;
+}
+
+.btn-primary:active {
+  background: $primary-color;
+  text-decoration: none;
+}
