--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -11,4 +11,11 @@
 
 .navbar {
     margin-bottom: 0;
+    ul>li>a {
+      font-family: 'Dosis', sans-serif;
+    }
+}
+
+ul.nav>navbar-nav>navbar-right {
+
 }
