--- a/src/js/views/events/eventsList.html
+++ b/src/js/views/events/eventsList.html
@@ -17,7 +17,7 @@
     </li>
   </ul>
 </div>
-<h2 class="eventTitles" ng-if="events.checkAttending">Attending</h2>
+<h2 class="eventTitles" ng-hide="events.checkAttending">Attending</h2>
 <div class="container">
   <ul class="row">
     <li class="tile col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 eventBox" ng-repeat="event in events.requestsAccepted track by $index">
