added the 'steps'

--- a/src/js/views/landing.html
+++ b/src/js/views/landing.html
@@ -10,6 +10,8 @@
     </div>
   </div>
   <div class="row2">
-    
+    <div class="one">1  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
+    <div class="two">2 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
+    <div class="three">3 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
   </div>
 </section>
