adding the scss to home landing page again

--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -10,4 +10,36 @@ section.home {
     margin: 0;
   }
 
+  .row2{
+    color: orange;
+    width: 100%;
+    margin-top: 160px;
+    text-align: center;
+    font-weight: 1px;
+    float: inline-block;
+  }
+
+
+  .one{
+    margin-left: 5%;
+    margin: 0 10 10px;
+    float: left;
+    width: 30%;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .two{
+    float: left;
+    width: 30%;
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .three{
+    float: left;
+    width: 30%;
+    font-size: 30px;
+    text-align: center;
+  }
 }
