--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -9,10 +9,10 @@
 
 .btn-primary:active {
   background: $primary-color;
-  text-decoration: none;
+  // text-decoration: none;
 }
 
 .btn-primary:active {
   background: $primary-color;
-  text-decoration: none;
+  // text-decoration: none;
 }
