--- a/src/scss/pages/_inbox.scss
+++ b/src/scss/pages/_inbox.scss
@@ -1,12 +1,13 @@
 .messageHeader {
   padding: 10px;
+  text-decoration: underline;
 }
 
 .switchMessage {
     float: right;
-    margin-right: 380px;
-    margin-top: 12px;
-    font-size: 30px;
+    margin-right: 408px;
+    margin-top: 24px;
+    font-size: 19px;
 }
 
 .active-event {
@@ -42,11 +43,6 @@
   display: inline-block;
   border: 4px solid $primary-color;
 }
-
-// top: -12px;
-// left: -20px;
-// height: 100px;
-// width: 100px;
 
 .pending {
   float: right;
