slight changes to navbar

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -12,8 +12,20 @@
 .navbar {
     margin-bottom: 0;
     ul>li>a {
-      font-family: 'Dosis', sans-serif;
+    font-family: 'Dosis', sans-serif;
+      .navbar {
+    border-bottom: 1px solid $primary-color;
+}
     }
+}
+
+.navbar-default .navbar-nav > li > a {
+  color: #1a181a;
+}
+
+.navbar-default {
+    background-color: #f8f8f8;
+    border-bottom: 1px solid $primary-color;
 }
 
 ul.nav>navbar-nav>navbar-right {
