added animation to message system

--- a/src/js/views/events/show.html
+++ b/src/js/views/events/show.html
@@ -20,7 +20,7 @@
 
       <div ng-if="eventsShow.showRequestModal">
 
-        <form class="messageForm" ng-submit="eventsShow.interested(eventsShow.event)">
+        <form class="messageForm animated zoomIn" ng-submit="eventsShow.interested(eventsShow.event)">
           <div class="form-group">
             <input class="form-control requestMessage" type="text" name="requestMessage" ng-model="eventsShow.sendInterestedText" placeholder="Write your message here" >
           </div>
