profile picture added to events

--- a/src/js/views/events/eventsList.html
+++ b/src/js/views/events/eventsList.html
@@ -4,14 +4,13 @@
 </div>
 </div>
 
-
 <div class="container">
   <ul class="row">
     <h2 class="eventTitles" ng-hide="events.checkHosting">Hosting</h2>
     <li class="tile col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xl-4 eventBox" ng-repeat="event in events.events track by $index">
       <img ui-sref="eventsShow({ id: event._id })" src="{{ event.img }}">
       <div class="info">
-        <img class="user-img" src="{{ event.host.profilePicture }}">
+        <img class="user-img" src="{{ events.profilePicture }}">
         <h3>{{ event.name }}</h3>
       </div>
     </li>
