finished styling page

--- a/src/js/views/landing.html
+++ b/src/js/views/landing.html
@@ -9,9 +9,12 @@
       </ul>
     </div>
   </div>
-  <div class="row2">
-    <div class="one">1  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
-    <div class="two">2 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
-    <div class="three">3 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit</p></div>
-  </div>
+  <img src="/images/arrow.png" id="arrow" class="pulse">
+
+<div class="row">
+  <div class="col-md-4"><div class="circle">1</div>Make an event</div>
+  <div class="col-md-4"><div class="circle">2</div>Find friends</div>
+  <div class="col-md-4"><div class="circle">3</div>Start an adventure</div>
+</div>
+
 </section>
