--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -11,7 +11,6 @@ section.home {
   }
 
   .row2{
-    color: orange;
     width: 100%;
     margin-top: 160px;
     text-align: center;
@@ -19,27 +18,32 @@ section.home {
     float: inline-block;
   }
 
+  #arrow{
+    max-width: 20px;
+    margin-top: 25px;
+  }
 
-  .one{
-    margin-left: 5%;
+
+  .col-md-4{
+    margin-top: 100px;
+    margin-left: 6%;
     margin: 0 10 10px;
     float: left;
-    width: 30%;
+    width: 25%;
     font-size: 30px;
     text-align: center;
+
+    .circle{
+      border-radius: 40%;
+      width: 60px;
+      height: 50px;
+      color: white;
+      background: rgb(249, 147, 39);
+      clear: both;
+      margin-left: 120px;
+      margin-top: 20px;
+    }
   }
 
-  .two{
-    float: left;
-    width: 30%;
-    font-size: 30px;
-    text-align: center;
-  }
 
-  .three{
-    float: left;
-    width: 30%;
-    font-size: 30px;
-    text-align: center;
-  }
 }
